# slibcosmic

./: Cargo.toml  README.md  build.rs
examples/cosmic/: Cargo.toml  build.rs
examples/cosmic/rust/: Cargo.toml  build.rs
examples/cosmic/src/: main.rs
examples/cosmic/ui/: cosmic.slint  window.slint
examples/cosmic/ui/_imports/: cosmic.slint
src/: lib.rs
ui/: cosmic.slint  gallery.slint  lib.slint
ui/components/: components.slint  cosmic-window.slint  extended-touch-area.slint  icon.slint  list-item.slint  popup-border.slint  text.slint
ui/styling/: brushes.slint  icons.slint  images.slint  palette.slint  settings.slint  styling.slint  typography.slint
ui/widgets/: button.slint  check-box.slint  combo-box.slint  hyperlink.slint  line-edit.slint  radio-button.slint  scroll-view.slint  slider.slint  spin-box.slint  spin-button.slint  switch.slint  toggle.slint  widgets.slint
