[package]
name = "cosmic"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["Florian Blasius <co_sl@tutanota.com>"]
description = "Example uusign book_flip and coop_widgets"
publish = false
repository = "https://codeberg.org/flovansl/coop_sl"

[[bin]]
path = "src/main.rs"
name = "cosmic"

[dependencies]
slint = "1.0.2"

[build-dependencies]
slint-build = "1.0.2"